syntax = "proto3";

package crocodile.srv.executor;

import "crocodile/service/job/proto/job/job.proto";

// 订阅消息
message ExecuteMsg {
	// 任务的事件类型 执行任务杀死任务
	int32 event = 1;
	// 任务的详细信息
	crocodile.srv.job.Task task = 2;
	// 执行任务的主机IP
	string runhost = 3;
}